# masterarbeit

./: .gitignore  .travis.yml  README.md
atf_app_template/: CMakeLists.txt  package.xml
atf_app_template/config/: scene_config.yaml  test_config.yaml  test_config_example.yaml  test_generation_config.yaml  test_generation_config_example.yaml  test_suite.yaml  test_suite_example.yaml
atf_app_template/config/robotname/: robot_config.yaml
atf_app_template/launch/: atf_app.launch
atf_app_template/scripts/: atf_app.py
atf_app_template/test/: atf_app.test
atf_test/: CMakeLists.txt  package.xml
atf_test/config/: scene_config.yaml  test_config.yaml  test_generation_config.yaml  test_suite.yaml
atf_test/config/robot/: robot_config.yaml
atf_test/scripts/: .dropbox_uploader  dropbox_uploader.sh  publish_tf.py  publisher.py
atf_test/test/: publish_tf.test  test_recording.test  ts1_t1_1.test
cob_grasping_app/: CMakeLists.txt  package.xml
cob_grasping_app/config/: cob.rviz  scene_config.yaml  test_config.yaml  test_generation_config.yaml  test_generation_config_example.yaml  test_suite.yaml
cob_grasping_app/config/cob4-2/: robot_config.yaml
cob_grasping_app/launch/: grasping_app.launch  robot.launch  rviz.launch
cob_grasping_app/scripts/: grasping_app.py
cob_grasping_app/test/: grasping_app.test
